--- a/package.json
+++ b/package.json
@@ -2,23 +2,81 @@
   "name": "formfunnel",
   "version": "0.0.4",
   "description": "Fill forms with Google Sheets data",
-  "main": "index.js",
+  "main": "src/App/index.js",
+  "author": "Jonathan Krone <jonathankrone@gmail.com>",
+  "license": "ISC",
   "directories": {
     "test": "test",
     "src": "src"
   },
-  "devDependencies": {},
+  "scripts": {
+    "test": "node test/index.js",
+    "start": "electron-forge start",
+    "debug": "electron-forge start  -- --inspect=5858",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint --cache --color --ext .jsx,.js src"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "electron-forge": "^5.2.2",
+    "electron-prebuilt-compile": "2.0.2",
+    "eslint": "^3",
+    "eslint-config-airbnb": "^15",
+    "eslint-plugin-import": "^2",
+    "eslint-plugin-jsx-a11y": "^5",
+    "eslint-plugin-react": "^7"
+  },
   "dependencies": {
     "chalk": "^2.4.1",
+    "classnames": "^2.2.6",
     "csv-parse": "^2.5.0",
+    "electron-compile": "^6.4.2",
+    "electron-devtools-installer": "^2.1.0",
+    "electron-squirrel-startup": "^1.0.0",
     "googleapis": "^32.0.0",
     "pdffiller": "^0.0.10",
     "ramda": "^0.25.0",
-    "readline": "^1.3.0"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "readline": "^1.3.0",
+    "tachyons": "^4.10.0"
   },
-  "scripts": {
-    "test": "node test/index.js"
-  },
-  "author": "Jonathan Krone <jonathankrone@gmail.com>",
-  "license": "ISC"
+  "config": {
+    "forge": {
+      "make_targets": {
+        "win32": [
+          "squirrel"
+        ],
+        "darwin": [
+          "zip"
+        ],
+        "linux": [
+          "deb",
+          "rpm"
+        ]
+      },
+      "electronPackagerConfig": {
+        "packageManager": "yarn"
+      },
+      "electronWinstallerConfig": {
+        "name": "formfunnel"
+      },
+      "electronInstallerDebian": {},
+      "electronInstallerRedhat": {},
+      "github_repository": {
+        "owner": "",
+        "name": ""
+      },
+      "windowsStoreConfig": {
+        "packageName": "",
+        "name": "formfunnel"
+      }
+    }
+  }
 }
