--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eslint-config-airbnb": "^15",
     "eslint-plugin-import": "^2",
     "eslint-plugin-jsx-a11y": "^5",
-    "eslint-plugin-react": "^7"
+    "eslint-plugin-react": "^7",
+    "husky": "^0.14.3",
+    "pretty-quick": "^1.6.0"
   },
   "dependencies": {
     "chalk": "^2.4.1",
