--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formfunnel",
+  "name": "FormFunnel",
   "version": "0.0.4",
   "description": "Fill forms with Google Sheets data",
   "main": "src/App/index.js",
@@ -40,10 +40,13 @@
     "electron-compile": "^6.4.2",
     "electron-devtools-installer": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^2.0.0",
+    "electron-unhandled": "^1.1.0",
     "googleapis": "^32.0.0",
     "pdffiller": "^0.0.10",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "readline": "^1.3.0",
