--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "linebreak-style": 0,
     "react/prefer-stateless-function": 0,
     "no-unused-vars": ["error", { varsIgnorePattern: "_" }],
-    "semis": 0,
+    "semi": 0,
     "no-param-reassign": 0,
     "no-use-before-define": ["error", { functions: false }]
   }
