--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pretty-quick": "^1.6.0"
   },
   "dependencies": {
+    "@google-cloud/datastore": "^1.4.1",
     "chalk": "^2.4.1",
     "classnames": "^2.2.6",
     "csv-parse": "^2.5.0",
@@ -50,7 +51,8 @@
     "react-dom": "^16.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "readline": "^1.3.0",
-    "tachyons": "^4.10.0"
+    "tachyons": "^4.10.0",
+    "uuid": "^3.2.1"
   },
   "config": {
     "forge": {
