refactor: require -> import

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 node_modules
 
 # Secrets
-Sheets to PDF-c352f25c1508.json
-client_secret.json
-credentials.json
-secrets.js
+secrets/
+
+# Sheets to PDF-c352f25c1508.json
+# client_secret.json
+# credentials.json
+# secrets.js
 
 # electron-forge
 out/
