--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "csv-parse": "^2.5.0",
     "electron-compile": "^6.4.2",
     "electron-devtools-installer": "^2.1.0",
+    "electron-log": "^2.2.16",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^2.0.0",
     "electron-unhandled": "^1.1.0",
@@ -51,7 +52,6 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
-    "readline": "^1.3.0",
     "tachyons": "^4.10.0",
     "uuid": "^3.2.1"
   },
@@ -70,8 +70,7 @@
         ]
       },
       "electronPackagerConfig": {
-        "packageManager": false,
-        "asar": true
+        "packageManager": false
       },
       "electronWinstallerConfig": {
         "name": "FormFunnel"
