--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,37 @@
     "import/no-unresolved": [2, { "ignore": ["electron"] }],
     "linebreak-style": 0,
     "react/prefer-stateless-function": 0,
-    "no-unused-vars": ["error", { "varsIgnorePattern": "_" }],
+    "no-unused-vars": [
+      "error",
+      {
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
     "semi": 0,
     "no-param-reassign": 0,
     "no-use-before-define": ["error", { "functions": false }],
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "arrow-parens": 0,
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "never",
+        "objects": "always-multiline",
+        "imports": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "ignore"
+      }
+    ],
+    "max-len": [
+      "error",
+      {
+        "code": 80,
+        "ignoreStrings": true,
+        "ignoreComments": true,
+        "ignoreTemplateLiterals": true
+      }
+    ],
+    "react/no-array-index-key": 0
   }
 }
