--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint"
+      "pre-push": "npm lint"
     }
   },
   "devDependencies": {
