--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "test",
     "src": "src"
   },
+  "engine": {
+    "node": ">=9.5.0 <=10.0.0"
+  },
   "scripts": {
     "test": "node test/index.js",
     "start": "electron-forge start",
