--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^16.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "tachyons": "^4.10.0",
+    "utf8-fdf-generator": "^0.0.3",
     "uuid": "^3.2.1"
   },
   "config": {
