--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     }
   },
   "devDependencies": {
+    "@types/semver": "^5.5.0",
     "babel-plugin-dynamic-import-node": "^2.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -44,7 +45,8 @@
     "eslint-plugin-import": "^2",
     "eslint-plugin-jsx-a11y": "^5",
     "eslint-plugin-react": "^7",
-    "husky": "^0.14.3"
+    "husky": "^0.14.3",
+    "typescript": "^3.0.1"
   },
   "dependencies": {
     "@google-cloud/datastore": "^1.4.1",
