--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     }
   },
   "devDependencies": {
+    "@types/electron-store": "^1.3.0",
+    "@types/node": "^10.5.8",
     "@types/semver": "^5.5.0",
     "babel-plugin-dynamic-import-node": "^2.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
