--- a/package.json
+++ b/package.json
@@ -31,9 +31,15 @@
     }
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.6",
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/electron-store": "^1.3.0",
+    "@types/electron-unhandled": "^1.1.0",
     "@types/node": "^10.5.8",
+    "@types/react": "^16.4.9",
+    "@types/react-custom-scrollbars": "^4.0.5",
     "@types/semver": "^5.5.0",
+    "@types/uuid": "^3.4.3",
     "babel-plugin-dynamic-import-node": "^2.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
