--- a/.compilerc
+++ b/.compilerc
@@ -2,22 +2,56 @@
   "env": {
     "development": {
       "application/javascript": {
-        "presets": [
-          ["env", { "targets": { "electron": "1.6.0" } }],
-          "react"
+        "presets": [["env", { "targets": { "electron": "1.6.0" } }], "react"],
+        "plugins": [
+          "transform-async-to-generator",
+          "transform-es2015-classes",
+          "react-hot-loader/babel"
         ],
-        "plugins": ["transform-async-to-generator", "transform-es2015-classes", "react-hot-loader/babel", "dynamic-import-node", "syntax-dynamic-import"],
         "sourceMaps": "inline"
+      },
+      "text/typescript": {
+        "removeComments": false,
+        "preserveConstEnums": true,
+        "declaration": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "strictNullChecks": true,
+        "noUnusedLocals": true,
+        "noImplicitThis": true,
+        "noUnusedParameters": true,
+        "inlineSourceMap": true,
+        "inlineSources": true,
+        "target": "es2015",
+        "module": "commonjs",
+        "jsx": "react"
       }
     },
     "production": {
       "application/javascript": {
-        "presets": [
-          ["env", { "targets": { "electron": "1.6.0" } }],
-          "react"
-        ],
-        "plugins": ["transform-async-to-generator", "transform-es2015-classes", "dynamic-import-node", "syntax-dynamic-import"],
+        "presets": [["env", { "targets": { "electron": "1.6.0" } }], "react"],
+        "plugins": ["transform-async-to-generator", "transform-es2015-classes"],
         "sourceMaps": "none"
+      },
+      "text/typescript": {
+        "removeComments": false,
+        "preserveConstEnums": true,
+        "declaration": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "strictNullChecks": true,
+        "noUnusedLocals": true,
+        "noImplicitThis": true,
+        "noUnusedParameters": true,
+        "sourceMap": false,
+        "target": "es2015",
+        "jsx": "react"
       }
     }
   }
